# Aegis

./: .gitignore  Cargo.toml  README.md  USAGE.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  sentinel.yml
aegis/: main.py
aegis/analysis/: authenticity.py  binary.py  metadata.py  rich_model.py  steganography.py  structure_validator.py
aegis/core/: audit.py  hashing.py  image_object.py  pipeline.py  signing.py  vault.py
aegis/offensive/: fs_stego.py
aegis/offensive/algorithms/: adaptive.py  cost_functions.py  f5_stego.py  j_uniward.py  stc_embed.py
aegis/offensive/channels/: __init__.py  metadata_channel.py  multi_carrier.py  network_covert.py  palette_stego.py
aegis/processing/: core_ops.py
aegis/reporting/: reports.py
aegis/security/: sanitization.py  shredder.py  timestomp.py
analysis/: steganography.py
cli/: Cargo.toml
cli/src/: main.rs
core/: pipeline.py  signing.py
core_engine/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: metadata_parser.rs
libs/aegis-chameleon/: Cargo.toml
libs/aegis-chameleon/src/: lib.rs  pdf_html.rs
libs/aegis-crypto/: Cargo.toml
libs/aegis-crypto/src/: encryption.rs  lib.rs  stego.rs
libs/aegis-defense/: Cargo.toml
libs/aegis-defense/src/: adversarial_noise.rs  chaff.rs  cloak.rs  glitch.rs  lib.rs  poison.rs
libs/aegis-echo/: Cargo.toml
libs/aegis-echo/src/: enf.rs  lib.rs  spectrogram.rs  splice.rs
libs/aegis-forensics/: Cargo.toml
libs/aegis-forensics/src/: carver.rs  ela.rs  entropy.rs  ghosting.rs  lib.rs  lsb.rs  prnu.rs
libs/aegis-metadata/: Cargo.toml
libs/aegis-metadata/src/: binary_extractor.rs  composite_tags.rs  geocoding.rs  lib.rs  makernotes.rs  mutation_engine.rs  verification_proofs.rs
libs/aegis-neuron/: Cargo.toml
libs/aegis-neuron/src/: job_queue.rs  lib.rs  watchdog.rs
libs/aegis-optics/: Cargo.toml
libs/aegis-optics/src/: cfa_integrity.rs  chromatic_aberration.rs  forgery.rs  lib.rs
libs/aegis-oracle/: Cargo.toml
libs/aegis-oracle/src/: deepfake.rs  inference.rs  lib.rs  model.rs
libs/aegis-runtime/: Cargo.toml
libs/aegis-runtime/src/: interface.rs  lib.rs  plugin_engine.rs
libs/aegis-threat-detect/: Cargo.toml
libs/aegis-threat-detect/src/: lib.rs  polyglot.rs  signatures.rs
libs/aegis-vault/: Cargo.toml
libs/aegis-vault/src/: audit.rs  crypto.rs  dms.rs  lib.rs
libs/aegis-vision/: Cargo.toml
libs/aegis-vision/src/: lib.rs  privacy.rs  prnu.rs
offensive/: crypto.py
privacy_defense/: Cargo.toml
privacy_defense/src/: lib.rs
processing/: filters.py
security/: sanitization.py
tests/: test_advanced_features.py  test_comprehensive.py  test_core.py
tests/offensive/: test_crypto.py  test_stego.py
