[package]
name = "aegis-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34"
chacha20poly1305 = "0.10"
blake3 = "1.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
zeroize = "1.6"
rand = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
